[package]
name = "cc_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "3.1.6", features = ["derive"] }
crossbeam = "0.8.1"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

tokio = { version = "1.17.0", features = ["full"] }

futures-util = "0.3.21"
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
